@@ -327,7 +327,8 @@
                 textbackcolor CDATA #REQUIRED
                 VERTALIGN CDATA #REQUIRED
                 shadowtext CDATA #REQUIRED
-                relativetextsize CDATA #REQUIRED>
+                relativetextsize CDATA #REQUIRED
+                offsetfrombaseline CDATA #REQUIRED>
 
 <!-- 
         A paragraph and a style can have counter data.
