@@ -505,7 +505,9 @@ don't put a </?xml...> at the end of the file!).
         When FORMAT is used to specify the format of a style, pos and len are omitted.
 -->
 <!ELEMENT FORMAT
-    (COLOR|FONT|SIZE|WEIGHT|ITALIC|UNDERLINE|STRIKEOUT|VERTALIGN|SHADOWTEXT|ANCHOR|IMAGE|PICTURE|VARIABLE|TEXTBACKGROUNDCOLOR)*>
+    (COLOR|FONT|SIZE|WEIGHT|ITALIC|UNDERLINE|STRIKEOUT|VERTALIGN|SHADOWTEXT|ANCHOR|IMAGE|PICTURE|VARIABLE|TEXTBACKGROUNDCOLOR|OFFSETFROMBASELINE)*>
+
+
 <!ATTLIST FORMAT
     id CDATA #REQUIRED
     pos CDATA #IMPLIED
@@ -684,6 +686,14 @@ don't put a </?xml...> at the end of the file!).
 <!ATTLIST SHADOWTEXT
     value CDATA #REQUIRED>
 
+
+<!-- OFFSETFROMBASELINE
+        Value is define in pt
+-->
+<!ELEMENT OFFSETFROMBASELINE
+    EMPTY>
+<!ATTLIST OFFSETFROMBASELINE
+    value CDATA #REQUIRED>
 
 <!-- NAME
         The name of a style.
