@@ -3231,7 +3231,8 @@ void KWView::formatFont()
                                textIface->underlineLineType(),
                                textIface->strikeOutLineType(),
                                textIface->strikeOutLineStyle(),
-                               textIface->relativeTextSize());
+                               textIface->relativeTextSize(),
+                               textIface->offsetFromBaseLine());
 
     connect( m_fontDlg, SIGNAL( apply() ),
                  this, SLOT( slotApplyFont() ) );
@@ -3265,6 +3266,7 @@ void KWView::slotApplyFont()
                                                          m_fontDlg->getStrikeOutLineStyle(),
                                                          m_fontDlg->getShadowText(),
                                                          m_fontDlg->getRelativeTextSize(),
+                                                         m_fontDlg->getOffsetFromBaseLine(),
                                                          flags);
             if (cmd)
                 globalCmd->addCommand(cmd);
