@@ -277,3 +277,4 @@ Changes after KWord-1.2
 - Now we can change "picture path" / "personal expression path"
 - Add "Remove link"
 - Add font properties : change relative font size when we sub/super script font
+- Add support to add offset from baseline
