@@ -123,3 +123,4 @@ Changes after KPresenter 1.2
 - We can change "picture path"
 - Add "remove link"
 - Add font properties : change relative font size when we sub/super script font
+- Add support to add offset from baseline
